--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-redux": "^7.1.22",
+    "@types/redux": "^3.6.0",
     "@types/uuid": "^8.3.3",
     "add": "^2.0.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.6",
     "react-scripts": "3.4.1",
+    "redux": "^4.1.2",
     "styled-components": "^5.3.3",
     "typescript": "4.0",
     "yarn": "^1.22.17"
