--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.22",
+    "@types/react-router-dom": "^5.3.3",
     "@types/redux": "^3.6.0",
     "@types/uuid": "^8.3.3",
     "axios": "^0.26.0",
+    "formik": "^2.2.9",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "3.4.1",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
